--- a/09-杰伦音乐播放器/09-杰伦音乐播放器/Base.lproj/Main.storyboard
+++ b/09-杰伦音乐播放器/09-杰伦音乐播放器/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
                                 <rect key="frame" x="0.0" y="299" width="375" height="226"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="hf8-0L-9fg">
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="hf8-0L-9fg">
                                 <rect key="frame" x="7" y="560" width="64" height="64"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="player_btn_pre_normal.png"/>
@@ -37,7 +37,7 @@
                                     <action selector="changeMusic:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qf1-uE-FOw"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="zyW-nY-zL4">
+                            <button opaque="NO" tag="3" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="zyW-nY-zL4">
                                 <rect key="frame" x="56" y="560" width="118" height="64"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="player_btn_play_normal.png"/>
@@ -45,7 +45,7 @@
                                     <action selector="playOrPause:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iGv-f1-pIM"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="1Op-YS-dj2">
+                            <button opaque="NO" tag="4" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="1Op-YS-dj2">
                                 <rect key="frame" x="154" y="560" width="118" height="64"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="player_btn_pause_normal.png"/>
@@ -53,7 +53,7 @@
                                     <action selector="playOrPause:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CGD-Yq-Rvy"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="EA8-NT-fcC">
+                            <button opaque="NO" tag="2" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="EA8-NT-fcC">
                                 <rect key="frame" x="282" y="560" width="64" height="64"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="player_btn_next_normal.png"/>
